k8s_local_dev/ingress-service-local-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - paths:
        - path: /?(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: client-cluster-ip-service
              port:
                number: 3000
        - path: /api/?(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: server-cluster-ip-service
              port:
                number: 5000
